add notification and fix repo
